--- a/TP4/EntregaFinal/index.html
+++ b/TP4/EntregaFinal/index.html
@@ -14,12 +14,14 @@
 </head>
 
 <body>
-    
+
     <div class="backgroundScrolling page1">
         <header>
             <nav class="navBar">
                 <div class="nav_hamburger">
-                    <button><span></span><span></span><span></span></button>
+                    <button>
+                        <span></span><span></span><span></span>
+                    </button>
                 </div>
                 <div class="logo"></div>
                 <div>
@@ -27,7 +29,7 @@
                 </div>
             </nav>
         </header>
-        <section>
+        <section class="section1">
             <div class="layerBackground arbol1"></div>
             <div class="elem1"></div>
             <div class="elem2"></div>
@@ -42,7 +44,7 @@
             <div class="roca3"></div>
             <div class="roca4"></div>
             <div class="arbusto3"></div>
-            <div class="arbusto4"></div>            
+            <div class="arbusto4"></div>
         </section>
     </div>
     <div class="backgroundScrolling page2">
@@ -52,12 +54,64 @@
                     <h1 class="tittle">La app más divertida y educativa y para niños de 3 años</h1>
                 </div>
                 <div class="box2">
-                    <p class="description">Numberblocks World es una divertida aplicación de video a la carta y juegos por suscripción dirigida a niños a partir de 3 años, con un grupo de edad principal de 4 a 6 años, creada por el equipo de Alphablocks Ltd. y Blue Zoo Animations Studio, ganador de un premio BAFTA.</p>
+                    <p class="description">Numberblocks World es una divertida aplicación de video a la carta y juegos
+                        por suscripción dirigida a niños a partir de 3 años, con un grupo de edad principal de 4 a 6
+                        años, creada por el equipo de Alphablocks Ltd. y Blue Zoo Animations Studio, ganador de un
+                        premio BAFTA.</p>
                 </div>
             </div>
-            <div class="elem5"></div>      
-            <div class="tv"></div>   
-            <div class="elem4"></div>       
+            <div class="elem5"></div>
+            <div class="tv"></div>
+            <div class="elem4"></div>
+        </section>
+    </div>
+    <div class="backgroundScrolling page3">
+        <section class="section3">
+            <div class="muestra1">
+                <img src="assets/muestra1.png" alt="muestra" srcset="" width="332" height="302">
+                <div class="containerTxt">
+                    <p class="txtMuestra">Los niños descubrirán lo divertido que puede ser aprender matemáticas. A
+                        través de personajes
+                        animados y desafíos interactivos, podrán sumar, restar y entender conceptos básicos de manera
+                        fácil y entretenida. ¡Cada número cobra vida para hacer que las matemáticas sean emocionantes!
+                    </p>
+                </div>
+            </div>
+            <div class="muestra2">
+                <img src="assets/muestra2.png" alt="muestra" srcset="" width="332" height="302">
+                <div class="containerTxt">
+                    <p class="txtMuestra">
+                        Con NumberBlocks, los niños encontrarán emocionantes retos en cada nivel, diseñados para hacer
+                        que el aprendizaje sea tan divertido como un juego. ¡Cada desafío es una nueva aventura
+                        matemática!Diviértete e invita a tus amigos, desafíalos y gana premios.
+                    </p>
+                </div>
+            </div>
+            <div class="muestra3">
+                <img src="assets/muestra3.png" alt="muestra" srcset="" width="332" height="302">
+                <div class="containerTxt">
+                    <p class="txtMuestra">
+                        Entrena a UNO y Comparte lo que Aprendes! En NumberBlocks, deberás enseñar a UNO cada lección
+                        que aprendas, ayudándolo a crecer y superar nuevos desafíos matemáticos. ¡Conviértete en su
+                        mejor guía! Se su mejor amigo y diviértete con él.
+                    </p>
+                </div>
+            </div>
+        </section>
+    </div>
+    <div class="backgroundScrolling page4">
+        <section class="section4">
+            <div class="sectionTitle">
+                <span>Descubre el juego que convierte las <span class="resaltado">Matemáticas</span> en diversión </span>
+            </div>
+
+            <div class="sectionBtn">
+                <button class="btnDownload">
+                    ¡Descarga NumberBlocks hoy!
+                </button>
+            </div>
+
+            <div class="sectionImgPjs"></div>
         </section>
     </div>
 </body>
