--- a/TP4/EntregaFinal/index.html
+++ b/TP4/EntregaFinal/index.html
@@ -102,7 +102,8 @@
     <div class="backgroundScrolling page4">
         <section class="section4">
             <div class="sectionTitle">
-                <span>Descubre el juego que convierte las <span class="resaltado">Matemáticas</span> en diversión </span>
+                <span>Descubre el juego que convierte las <span class="resaltado">Matemáticas</span> en diversión
+                </span>
             </div>
 
             <div class="sectionBtn">
@@ -112,6 +113,99 @@
             </div>
 
             <div class="sectionImgPjs"></div>
+        </section>
+    </div>
+
+    <div class="backgroundScrolling page5">
+        <section class="section5">
+            <div class="section5Title">
+                <span>Más amigos, más diversion!</span>
+            </div>
+            <div class="characters">
+                <div class="imgPj0"></div>
+                <div class="imgPj1"></div>
+                <div class="imgPj2"></div>
+                <div class="imgPj3"></div>
+                <div class="imgPj4"></div>
+                <div class="imgPj5"></div>
+                <div class="imgPj6"></div>
+                <div class="imgPj7"></div>
+                <div class="imgPj8"></div>
+                <div class="imgPj9"></div>
+                <div class="imgPj10"></div>
+            </div>
+            <div class="txtInfo">
+                <div class="txtBody">
+                    <span class="resaltadoBig">Sumas Mágicas</span>
+                    <span class="txtAds">Ayuda a UNO y sus amigos a juntar bloques y ver cómo sus números crecen al
+                        sumar. Cada vez que
+                        sumas correctamente, los NumberBlocks ganan fuerza y desbloquean sorpresas mágicas. ¡Descubre
+                        cómo los números se combinan para formar resultados increíbles!</span>
+                </div>
+                <div class="txtBody">
+                    <span class="resaltadoBig">Rompecabezas de Restas</span>
+                    <span>Acompaña a UNO en un recorrido lleno de obstáculos donde solo podrás avanzar restando bloques
+                        correctamente. Observa cómo los personajes se transforman cuando restan, ¡y resuelve cada
+                        rompecabezas para llegar a la meta!</span>
+                </div>
+                <div class="txtBody">
+                    <span class="resaltadoBig">Carrera de Conteo</span>
+                    <span>Corre contra el reloj mientras cuentas bloques en secuencia para ayudar a los NumberBlocks a
+                        llegar
+                        al final. ¡Cada número correcto te da una ventaja extra! Con cada carrera, aprenderás a contar y
+                        a
+                        pensar rápido.</span>
+                </div>
+                <div class="txtBody">
+                    <span class="resaltadoBig">Encuentra el Número Oculto</span>
+                    <span>Busca entre los escenarios y ayuda a UNO a encontrar el número perdido para completar la
+                        secuencia. ¡Cada número oculto revela una sorpresa especial! Observa bien y explora cada rincón
+                        para descubrir dónde se esconde.</span>
+                </div>
+                <div class="txtBody">
+                    <span class="resaltadoBig">Desafío de Comparación</span>
+                    <span>En este reto, debes ayudar a UNO a identificar qué NumberBlock es mayor o menor. Aprende sobre
+                        la comparación de números mientras los personajes se colocan en orden de tamaño, ¡y desbloquea
+                        recompensas cada vez que aciertes!</span>
+                </div>
+                <div class="txtBody">
+                    <span class="resaltadoBig">Forma el Número Correcto</span>
+                    <span>¿Puedes combinar los bloques para crear el número solicitado? Elige los números correctos y
+                        únelos para formar nuevos resultados. ¡Es una forma divertida de practicar la construcción de
+                        números y descubrir cómo encajan!</span>
+                </div>
+                <div class="txtBody">
+                    <span class="resaltadoBig">Encuentra el Número Oculto</span>
+                    <span>Busca entre los escenarios y ayuda a UNO a encontrar el número perdido para completar la
+                        secuencia. ¡Cada número oculto revela una sorpresa especial! Observa bien y explora cada rincón
+                        para descubrir dónde se esconde.
+                    </span>
+                </div>
+                <div class="txtBody">
+                    <span class="resaltadoBig">Salto de Sumas</span>
+                    <span>Lleva a UNO a saltar de bloque en bloque sumando números a medida que avanzas. La meta es
+                        llegar al otro lado, ¡y solo podrás hacerlo si sumas correctamente! Cada salto exitoso te acerca
+                        a un nuevo nivel.</span>
+                </div>
+                <div class="txtBody">
+                    <span class="resaltadoBig">Rompecabezas de secuencias</span>
+                    <span>Lleva a UNO a saltar de bloque en bloque sumando números a medida que avanzas. La meta es
+                        llegar al otro lado, ¡y solo podrás hacerlo si sumas correctamente! Cada salto exitoso te acerca
+                        a un nuevo nivel.</span>
+                </div>
+                <div class="txtBody">
+                    <span class="resaltadoBig">El Desafío del Doble</span>
+                    <span>Descubre qué sucede cuando multiplicas un NumberBlock por dos. Ayuda a UNO a duplicar números
+                        y ver cómo crecen rápidamente. ¡Una manera emocionante de aprender el concepto de "el doble" y
+                        multiplicación básica!</span>
+                </div>
+                <div class="txtBody">
+                    <span class="resaltadoBig">Aventura de Divisiones</span>
+                    <span>Guía a UNO y sus amigos mientras dividen bloques en partes iguales. Divide los bloques
+                        correctamente para que cada NumberBlock tenga su parte justa. Un desafío perfecto para entender
+                        la división de una forma divertida y visual.</span>
+                </div>
+            </div>
         </section>
     </div>
 </body>
