--- a/TP4/EntregaFinal/index.html
+++ b/TP4/EntregaFinal/index.html
@@ -208,6 +208,16 @@
             </div>
         </section>
     </div>
+
+    <div class="backgroundScrolling page6">
+        <section class="section6">
+            <div>
+                <span class="txtWatchVideo">Mira el video y descubre el sorprendente mundo de los NumberBlocks!</span>
+            </div>
+            <div class="videoNumbers"></div>
+            <div class="pjVideo"></div>
+        </section>
+    </div>
 </body>
 
 </html>
