--- a/TP4/EntregaFinal/index.html
+++ b/TP4/EntregaFinal/index.html
@@ -254,6 +254,19 @@
         <div class="boxTittle9">
             <h1 class="tittlePage9">¿Quieres ser el primero en enterarse de todas las novedades?</h1>
         </div>
+        <div class="form"></div>
+        <div class="textPage9">Al inscribirse en nuestra lista de correo, nos autoriza a ponernos en contacto con usted para enviarle ofertas y actualizaciones de marketing por correo electrónico, y también acepta nuestra Política de privacidad y las Condiciones del servicio.</div>
+        <div class="politica"></div>
+        <div class="pjs">
+            <div class="page9_elem2"></div>
+            <div class="page9_elem3"></div>
+            <div class="page9_elem1"></div>
+        </div>
+        <img src="assets/fondoPage9.png" class="fondo" alt="">
+        <div class="social"></div>
+    </div>
+    <div>
+        <div class=""></div>
     </div>
 </body>
 
