estructuracion de la pagina completa

--- a/TP4/EntregaFinal/index.html
+++ b/TP4/EntregaFinal/index.html
@@ -222,16 +222,22 @@
     <div class="backgroundScrolling page7">
         <section>
             <div class="textPage7">
-                <h1 class="resaltadoRojo">¡Experimenta Efectos 3D Asombrosos en NumberBlocks: Una Aventura Matemática Inmersiva!</h1>
+                <h1 class="resaltadoRojo">¡Experimenta Efectos 3D Asombrosos en NumberBlocks: Una Aventura Matemática
+                    Inmersiva!</h1>
             </div>
             <div class="parrafoPage7">
-                <p class="pText7">En NumberBlocks, la aventura no solo está en el aprendizaje, ¡sino también en la experiencia visual! Disfruta de efectos 3D asombrosos que dan vida a cada número y desafío, haciendo que las matemáticas cobren una nueva dimensión. A medida que los niños interactúan con los personajes y los bloques, verán cómo sus acciones tienen un impacto real en el entorno, creando un aprendizaje dinámico y emocionante. ¡Cada sesión de juego se convierte en una experiencia inolvidable llena de color y diversión!</p>
+                <p class="pText7">En NumberBlocks, la aventura no solo está en el aprendizaje, ¡sino también en la
+                    experiencia visual! Disfruta de efectos 3D asombrosos que dan vida a cada número y desafío, haciendo
+                    que las matemáticas cobren una nueva dimensión. A medida que los niños interactúan con los
+                    personajes y los bloques, verán cómo sus acciones tienen un impacto real en el entorno, creando un
+                    aprendizaje dinámico y emocionante. ¡Cada sesión de juego se convierte en una experiencia
+                    inolvidable llena de color y diversión!</p>
             </div>
             <div class="elem1Big">
-                <model-viewer id="reveal" loading="eager" camera-controls touch-action="pan-y" 
-                auto-rotate poster="../../assets/poster-shishkebab.webp" 
-                tone-mapping="aces" src="../../shared-assets/models/shivshkebab.glb" 
-                shadow-intensity="1" alt="A 3D model of a shishkebab">
+                <model-viewer id="reveal" loading="eager" camera-controls touch-action="pan-y" auto-rotate
+                    poster="../../assets/poster-shishkebab.webp" tone-mapping="aces"
+                    src="../../shared-assets/models/shivshkebab.glb" shadow-intensity="1"
+                    alt="A 3D model of a shishkebab">
                 </model-viewer>
             </div>
         </section>
@@ -255,19 +261,43 @@
             <h1 class="tittlePage9">¿Quieres ser el primero en enterarse de todas las novedades?</h1>
         </div>
         <div class="form"></div>
-        <div class="textPage9">Al inscribirse en nuestra lista de correo, nos autoriza a ponernos en contacto con usted para enviarle ofertas y actualizaciones de marketing por correo electrónico, y también acepta nuestra Política de privacidad y las Condiciones del servicio.</div>
+        <div class="textPage9">Al inscribirse en nuestra lista de correo, nos autoriza a ponernos en contacto con usted
+            para enviarle ofertas y actualizaciones de marketing por correo electrónico, y también acepta nuestra
+            Política de privacidad y las Condiciones del servicio.</div>
         <div class="politica"></div>
-        <div class="pjs">
-            <div class="page9_elem2"></div>
-            <div class="page9_elem3"></div>
-            <div class="page9_elem1"></div>
+        <div class="p9Mountain">
+            <img src="assets/fondoPage9.png" alt="p9WallPaper" width="1280" height="500">
         </div>
-        <img src="assets/fondoPage9.png" class="fondo" alt="">
-        <div class="social"></div>
-    </div>
-    <div>
-        <div class=""></div>
+        <div class="page9Elem2"></div>
+        <div class="page9Elem3"></div>
+        <div class="page9Elem1"></div>
+
+
     </div>
 </body>
+<footer>
+    <div class="consolas">
+        <div></div>
+    </div>
+    <div class="footerInfo">
+        <div class="footerTxt">
+            ©SEGA. All rights reserved. SEGA is registered in the U.S. Patent and Trademark Office. SEGA, the SEGA logo
+            and SONIC SUPERSTARS are either registered trademarks or trademarks of SEGA CORPORATION or its affiliates.
+            All other trademarks, logos and copyrights are property of their respective owners.©2023 The LEGO Group.
+            LEGO, the LEGO logo, the Minifigure, and the Brick and Knob configurations are trademarks and/or copyrights
+            of the LEGO Group. All other marks and trademarks are the property of their respective owners. All rights
+            reserved."PS", "PS5" and "PS4" are registered trademarks or trademarks of Sony Interactive Entertainment
+            Inc.Microsoft, the Xbox Sphere mark, the Series X logo, Xbox One, and Xbox Series X are trademarks of the
+            Microsoft group of companies.Nintendo Switch is a trademark of NintendoEPIC GAMES and the EPIC STORE LOGO
+            are trademarks or registered trademarks of EPIC GAMES INC.©2023 Valve Corporation. Steam and the Steam logo
+            are trademarks and/or registered trademarks of Valve Corporation in the U.S. and/or other countries.The ESRB
+            rating icons are registered trademarks of the Entertainment Software Association. <br>
+            <br>
+
+            <span class="resaltadoFooter">COOKIE POLICY PRIVACY POLICY</span>
+        </div>
+        <div class="footerSocialIcons"></div>
+    </div>
+</footer>
 
 </html>
