algunas animaciones de scroll

--- a/TP4/EntregaFinal/index.html
+++ b/TP4/EntregaFinal/index.html
@@ -26,7 +26,9 @@
                         <span></span><span></span><span></span>
                     </button>
                 </div>
-                <div class="logo"></div>
+                <div class="logo">
+                <div class="numberBlockPoster" id="logoPage"></div>
+                </div>
                 <div>
                     <button class="btnBuy">COMPRAR</button>
                 </div>
@@ -37,7 +39,6 @@
             <div class="elem1"></div>
             <div class="elem2"></div>
             <div class="elem3"></div>
-            <div class="numberBlockPoster"></div>
             <div class="arbol2"></div>
             <div class="arbol3"></div>
             <div class="roca1"></div>
@@ -124,20 +125,22 @@
             <div class="section5Title">
                 <span>Más amigos, más diversion!</span>
             </div>
-            <div class="characters">
-                <div class="imgPj0"></div>
-                <div class="imgPj1"></div>
-                <div class="imgPj2"></div>
-                <div class="imgPj3"></div>
-                <div class="imgPj4"></div>
-                <div class="imgPj5"></div>
-                <div class="imgPj6"></div>
-                <div class="imgPj7"></div>
-                <div class="imgPj8"></div>
-                <div class="imgPj9"></div>
-                <div class="imgPj10"></div>
+            <div id="wrapper">
+                <div class="characters" id="content">
+                    <div class="imgPj0" id="parallax0"></div>
+                    <div class="imgPj1" id="parallax1"></div>
+                    <div class="imgPj2" id="parallax2"></div>
+                    <div class="imgPj3" id="parallax3"></div>
+                    <div class="imgPj4" id="parallax4"></div>
+                    <div class="imgPj5" id="parallax5"></div>
+                    <div class="imgPj6" id="parallax6"></div>
+                    <div class="imgPj7" id="parallax7"></div>
+                    <div class="imgPj8" id="parallax8"></div>
+                    <div class="imgPj9" id="parallax9"></div>
+                    <div class="imgPj10" id="parallax10"></div>
+                </div>
             </div>
-            <div class="txtInfo">
+                <div class="txtInfo">
                 <div class="txtBody">
                     <span class="resaltadoBig">Sumas Mágicas</span>
                     <span class="txtAds">Ayuda a UNO y sus amigos a juntar bloques y ver cómo sus números crecen al
@@ -309,5 +312,5 @@
         <div class="footerSocialIcons"></div>
     </div>
 </footer>
-
+<script src="js/main.js"></script>
 </html>
