--- a/TP4/EntregaFinal/index.html
+++ b/TP4/EntregaFinal/index.html
@@ -66,7 +66,11 @@
                 </div>
             </div>
             <div class="elem5"></div>
-            <div class="tv"></div>
+            <div class="frame">
+                <div class="tv" id="tvCambioFondo">
+                    <img src="" alt="">
+                </div>
+            </div>
             <div class="elem4"></div>
         </section>
     </div>
